--- a/css/styles.css
+++ b/css/styles.css
@@ -1,29 +1,28 @@
-body {
-    /* background-color: blue; */
-    border: 1px solid;
-    /* border-radius: ; */
+/* body {
+    background-color: #474d56;
+    border-radius: 1vh;
     height: 100vh;
+    margin: 0 10%;
+} */
+
+.container {
+    background-color: #474d56;
+    padding-top: 1vh;
 }
 
 .display-screen {
     background-color: #b8c4b4;
-    height: 25vh;
+    border-radius: 1vh;
+    height: 19vh;
+    /* margin-top: 1vh; */
 }
 
 .btn {
-    width: 80%;
-    height: 80%;
-    /* margin: 10%; */
-    margin-top: 1.875vh;
-}
-
-#buttons .row{
-    /* padding-top: 5%;
-    padding-bottom: 5%; */
-    height: 18.75vh;
-}
-
-#buttons .col{
+    width: 100%;
+    height: 18vh;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+    font-size: 7vh;
     text-align: center;
-    height: 100%;
+    font-weight: 500;
 }
