--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@
     height: 18vh;
     margin-top: 1vh;
     margin-bottom: 1vh;
-    font-size: 7vh;
+    /* font-size: 7vh*2vw; */
     text-align: center;
     font-weight: 500;
 }
