--- a/css/styles.css
+++ b/css/styles.css
@@ -17,11 +17,15 @@
     /* margin-top: 1vh; */
 }
 
+#buttons {
+    margin-top: 32vh;
+}
+
 .btn {
     width: 100%;
     height: 10vh;
-    margin-top: 5vh;
-    margin-bottom: 5vh;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
     /* font-size: 7vh*2vw; */
     text-align: center;
     font-weight: 500;
